--- a/OnlineApotheke2.0/pom.xml
+++ b/OnlineApotheke2.0/pom.xml
@@ -24,4 +24,21 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  <dependency>
+   <groupId>javax.servlet</groupId>
+   <artifactId>javax.servlet-api</artifactId>
+   <version>3.1.0</version>
+ </dependency>
+ <dependency>
+   <groupId>org.glassfish.jersey.containers</groupId>
+   <artifactId>jersey-container-servlet-core</artifactId>
+   <version>2.22</version>
+ </dependency>
+ <dependency>
+   <groupId>com.owlike</groupId>
+   <artifactId>genson</artifactId>
+   <version>1.3</version>
+ </dependency>
+  </dependencies>
 </project>
